# nakuyagen

./: README.md  pyproject.toml  run.sh
nakuyagen/: __init__.py  __main__.py  c.py  cpp.py  language.py  result.py
nakuyagen/format/c/: Makefile
nakuyagen/format/cpp/: Makefile
nakuyagen/format/cpp/src/: Makefile
