[tool.poetry]
name = "nakuyagen"
version = "0.1.0"
description = ""
license = "MIT"
authors = ["nack098 <nack098gamer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nakuyagen = "nakuyagen:main"
